[package]
name = "spl-vault-token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_vault_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { git="https://github.com/project-serum/anchor", version="0.25.0" }
anchor-spl  = { git="https://github.com/project-serum/anchor", version="0.25.0" }
solana-program = {version="1.10.29"}
spl-token = {version="3.3.0"}
rust_decimal = {version="1.25.0"}
num-traits = "0.2"
num-derive = "0.3"